--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@ add a script from an external source
 <script src="indexhtml.js"></script>
 
 <input type="file" value="Choose TXT File" id="picker"
-       accept="text/plain" onchange="readFileA()"/>
+       accept="text/html" onchange="readFileA()"/>
 <div id="sf"></div>
 
