--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-add a script from an external source
 <script src="indexhtml.js"></script>
 
 <input type="file" value="Choose TXT File" id="picker"
-       accept="text/html" onchange="readFileA()"/>
+       onchange="readFileA()"/>
 <div id="sf"></div>
 
